--- a/authservice/src/main/resources/application.yml
+++ b/authservice/src/main/resources/application.yml
@@ -1,1 +1,9 @@
-spring.application.name=authservice
+server:
+  port: 8081
+
+spring:
+  application:
+    name: auth-service
+  cloud:
+    config:
+      uri: http://localhost:8080
