--- a/authservice/src/main/resources/application.yml
+++ b/authservice/src/main/resources/application.yml
@@ -4,6 +4,15 @@ server:
 spring:
   application:
     name: auth-service
-  cloud:
-    config:
-      uri: http://localhost:8080
+  config:
+    import: configserver:http://localhost:8080
+  datasource:
+    url: jdbc:h2:mem:authservice
+    driver-class-name:  org.h2.Driver
+    username: root
+    password: root
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
