--- a/congfigserver/src/main/resources/application.yml
+++ b/congfigserver/src/main/resources/application.yml
@@ -30,10 +30,10 @@ spring:
           searchPaths: congfigserver/src/main/resources
 
   datasource:
-    url: jdbc:mysql://localhost:3306/common_db
-    username: shoyeb
-    password: shoyeb
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: root
+    password: root
 
   jpa:
     hibernate:
